# datahello

./: entry_points.cfg  setup.cfg
src/datahello/: cli.py  core.py
src/datahello/data/: to_whom.txt
tests/: test_datahello.py
